Apps/Wordpress/ingress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  labels:
    environment: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tintorescopress.com
    http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: wordpress-service 
            port:
              number: 8080
